tests/fixtures/invalid/str_sub_bool.py
# Cannot subtract Str and Bool
x: str = "hello" - True
